examples/controller-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-bfe
  labels:
    app.kubernetes.io/name: bfe-ingress-controller
    app.kubernetes.io/instance: bfe-ingress-controller

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bfe-ingress-controller
  namespace: ingress-bfe
  labels:
    app.kubernetes.io/name: bfe-ingress-controller
    app.kubernetes.io/instance: bfe-ingress-controller

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bfe-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bfe-ingress-controller
    spec:
      serviceAccountName: bfe-ingress-controller
      containers:
        - name: bfe-ingress-controller
          image: bfenetworks/bfe-ingress-controller:latest
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: monitor
              containerPort: 8421
              
---
apiVersion: v1
kind: Service
metadata:
  name: bfe-controller-service
  namespace: ingress-bfe
  labels:
    app.kubernetes.io/name: bfe-ingress-controller
    app.kubernetes.io/instance: bfe-ingress-controller
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: bfe-ingress-controller
    app.kubernetes.io/instance: bfe-ingress-controller
  ports:
    - name: http 
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
