examples/controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bfe-ingress-controller
  namespace: default
  labels:
    app: bfe

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bfe
  template:
    metadata:
      labels:
        app: bfe
    spec:
      serviceAccountName: bfe-ingress-controller
      imagePullSecrets:
        - name: bfe
      containers:
        - name: bfe-ingress-controller
          image: bfenetworks:latest
          args: ["-n", "default"]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: monitor
              containerPort: 8421
              
---
apiVersion: v1
kind: Service
metadata:
  name: bfe-controller-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: bfe
  ports:
    - port: 8080
      targetPort: 8080
