examples/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: ingress-bfe
  labels:
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      app.kubernetes.io/instance: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
        app.kubernetes.io/instance: whoami
    spec:
      containers:
        - name: containouswhoami
          image: containous/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: ingress-bfe

spec:
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami
