examples/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-test
  namespace: ingress-bfe
  annotations:
    kubernetes.io/ingress.class: bfe

spec:
  rules:
    - host: "foo.com"
      http:
        paths:
          - path: /whoami
            backend:
              serviceName: whoami
              servicePort: 80
